smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/invalid-mixins-on-string.smithy
// Parse error at line 4, column 21 near ` X`: Unexpected shape type: with
namespace com.foo

string MyString with X
